--- a/src/app/modules/list/list.component.html
+++ b/src/app/modules/list/list.component.html
@@ -2,10 +2,9 @@
 <input [(ngModel)]="value" type="text" placeholder="Напишите что-нибудь" />
 <button (click)="addElem()">Добавить запись</button>
 <ul *ngFor="let elem of todoListService.elems">
-    <li >
-        <todo-elem [todoValue]="elem"> </todo-elem>
-        <p>{{elem.value}}</p>
+
+        <todo-elem [todoValue]=elem> </todo-elem>
         <button>Изменить статус записи</button>
         <button>Удалить</button>
-    </li>
+    
 </ul>
