--- a/src/app/modules/list/components/list/list.component.html
+++ b/src/app/modules/list/components/list/list.component.html
@@ -1,9 +1,6 @@
-<p>Ту ду лист</p>
-<input [(ngModel)]="newValue" type="text" placeholder="Напишите что-нибудь" />
-<button (click)="todoListService.addElem(newItem)">Добавить запись</button>
 <ul *ngFor="let elem of todoListService.elems">
     <li >
-        <todo-elem [newTodo]="elem"> </todo-elem>
-        <button (click)="todoListService.delete(elem.id)">Удалить запись</button>
+        <todo-elem [newTodo]="elem", (delete)="todoListService.delete($event)",> </todo-elem>
     </li>
 </ul>
+<todo-add-form  (addElem)="todoListService.addElem($event)"></todo-add-form>
