--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+ul {
+    list-style: none;
+  }
+
+body {
+    background: linear-gradient(to right, #eae5fb, #eac2b9);
+    text-align: center;
+    color: #302450;
+}
+
+h1 {
+    color: #302450;
+}
+
+
