--- a/src/app/modules/list/list.component.html
+++ b/src/app/modules/list/list.component.html
@@ -4,3 +4,6 @@
     </li>
 </ul>
 <app-add-form (addElem)="todoListService.addElem($event)" (generateId)="todoListService.generateId($event)"> </app-add-form>
+<button (click)="logout()">Выйти</button>
+
+
